--- a/docker/ffmpeg-worker/Dockerfile
+++ b/docker/ffmpeg-worker/Dockerfile
@@ -1,7 +1,15 @@
 FROM ubuntu:22.04
+
 ENV DEBIAN_FRONTEND=noninteractive
-RUN apt-get update && apt-get install -y ffmpeg curl && rm -rf /var/lib/apt/lists/*
+
+# Instalo dependencies: ffmpeg, curl, redis-cli, jq
+RUN apt-get update && \
+    apt-get install -y ffmpeg curl redis-tools jq && \
+    rm -rf /var/lib/apt/lists/*
+
 WORKDIR /work
+
 COPY worker.sh /work/worker.sh
 RUN chmod +x /work/worker.sh
+
 CMD ["/work/worker.sh"]
