--- a/.htaccess
+++ b/.htaccess
@@ -1,17 +1,12 @@
 RewriteEngine On
-RewriteBase /
 
-# If the request is for a valid file or directory, serve it directly
+# Nëse skedari ekziston, shërbeje direkt
 RewriteCond %{REQUEST_FILENAME} -f [OR]
 RewriteCond %{REQUEST_FILENAME} -d
 RewriteRule ^ - [L]
 
-# Otherwise, route everything through index.php
-RewriteRule ^(.*)$ index.php [QSA,L]
+# Rrugëtimi për API
+RewriteRule ^api/(.*)$ api/$1 [L]
 
-# Security headers
-<IfModule mod_headers.c>
-    Header always set X-Content-Type-Options nosniff
-    Header always set X-Frame-Options DENY
-    Header always set X-XSS-Protection "1; mode=block"
-</IfModule>
+# Të gjitha kërkesat e tjera shkojnë te index.php
+RewriteRule ^(.*)$ index.php [L]
